parser.out
Grammar:

Rule 0     S' -> statement
Rule 1     statement -> NAME PERIOD NEGATION SEMI
Rule 2     statement -> NAME PERIOD LETTER_F SEMI
Rule 3     statement -> NAME PERIOD LETTER_T SEMI
Rule 4     statement -> PRINT LPAREN NUMBER RPAREN SEMI
Rule 5     statement -> PRINT LPAREN expr RPAREN SEMI
Rule 6     statement -> PRINT LPAREN NAME RPAREN SEMI
Rule 7     statement -> PRINT LPAREN STRING RPAREN SEMI
Rule 8     statement -> METRONOMO LPAREN LETTER_D COMMA NUMBER RPAREN SEMI
Rule 9     statement -> METRONOMO LPAREN LETTER_A COMMA NUMBER RPAREN SEMI
Rule 10    statement -> VIBRATO LPAREN NUMBER RPAREN SEMI
Rule 11    statement -> GOLPE LPAREN RPAREN SEMI
Rule 12    statement -> PERCUTOR LPAREN LETTER_D LETTER_I RPAREN SEMI
Rule 13    statement -> PERCUTOR LPAREN LETTER_A LETTER_B RPAREN SEMI
Rule 14    statement -> PERCUTOR LPAREN LETTER_I RPAREN SEMI
Rule 15    statement -> PERCUTOR LPAREN LETTER_D RPAREN SEMI
Rule 16    statement -> PERCUTOR LPAREN LETTER_B RPAREN SEMI
Rule 17    statement -> PERCUTOR LPAREN LETTER_A RPAREN SEMI
Rule 18    statement -> VERTICAL LPAREN LETTER_D RPAREN SEMI
Rule 19    statement -> VERTICAL LPAREN LETTER_I RPAREN SEMI
Rule 20    statement -> ABANICO LPAREN LETTER_A RPAREN SEMI
Rule 21    statement -> ABANICO LPAREN LETTER_B RPAREN SEMI
Rule 22    statement -> DEF NAME LPAREN RPAREN LBRACE statement RBRACE
Rule 23    statement -> EN_CASO NAME Cuando
Rule 24    statement -> FOR LPAREN NUMBER RPAREN TO LPAREN NUMBER RPAREN LBRACE statement RBRACE
Rule 25    statement -> FOR LPAREN NUMBER RPAREN TO LPAREN NUMBER RPAREN STEP LPAREN NUMBER RPAREN LBRACE statement RBRACE
Rule 26    statement -> IF LPAREN expr RPAREN LBRACE statement RBRACE
Rule 27    statement -> IF LPAREN expr RPAREN LBRACE statement RBRACE Else
Rule 28    statement -> SET NAME COMMA expr SEMI
Rule 29    statement -> expr
Rule 30    statement -> NAME ASSIGN expr SEMI
Rule 31    Else -> ELSE LBRACE statement RBRACE
Rule 32    Cuando -> CUANDO NOT_EQUAL NUMBER EnTons
Rule 33    Cuando -> CUANDO EQUAL NUMBER EnTons
Rule 34    Cuando -> CUANDO GE NUMBER EnTons
Rule 35    Cuando -> CUANDO GT NUMBER EnTons
Rule 36    Cuando -> CUANDO LE NUMBER EnTons
Rule 37    Cuando -> CUANDO LT NUMBER EnTons
Rule 38    EnTons -> EN_TONS LBRACE statement RBRACE Sino
Rule 39    EnTons -> EN_TONS LBRACE statement RBRACE Cuando
Rule 40    Sino -> SI_NO LBRACE statement RBRACE FIN_EN_CASO
Rule 41    expr -> NAME
Rule 42    expr -> NUMBER
Rule 43    expr -> LPAREN expr RPAREN
Rule 44    expr -> expr NOT_EQUAL expr
Rule 45    expr -> expr EQUAL expr
Rule 46    expr -> expr GE expr
Rule 47    expr -> expr GT expr
Rule 48    expr -> expr LE expr
Rule 49    expr -> expr LT expr
Rule 50    expr -> expr INT_DIVIDE expr
Rule 51    expr -> expr MODULE expr
Rule 52    expr -> expr DIVIDE expr
Rule 53    expr -> expr TIMES expr
Rule 54    expr -> expr MINUS expr
Rule 55    expr -> expr PLUS expr

Unused terminals:

    COLON

Terminals, with rules where they appear:

ABANICO              : 20 21
ASSIGN               : 30
COLON                : 
COMMA                : 8 9 28
CUANDO               : 32 33 34 35 36 37
DEF                  : 22
DIVIDE               : 52
ELSE                 : 31
EN_CASO              : 23
EN_TONS              : 38 39
EQUAL                : 33 45
FIN_EN_CASO          : 40
FOR                  : 24 25
GE                   : 34 46
GOLPE                : 11
GT                   : 35 47
IF                   : 26 27
INT_DIVIDE           : 50
LBRACE               : 22 24 25 26 27 31 38 39 40
LE                   : 36 48
LETTER_A             : 9 13 17 20
LETTER_B             : 13 16 21
LETTER_D             : 8 12 15 18
LETTER_F             : 2
LETTER_I             : 12 14 19
LETTER_T             : 3
LPAREN               : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 24 24 25 25 25 26 27 43
LT                   : 37 49
METRONOMO            : 8 9
MINUS                : 54
MODULE               : 51
NAME                 : 1 2 3 6 22 23 28 30 41
NEGATION             : 1
NOT_EQUAL            : 32 44
NUMBER               : 4 8 9 10 24 24 25 25 25 32 33 34 35 36 37 42
PERCUTOR             : 12 13 14 15 16 17
PERIOD               : 1 2 3
PLUS                 : 55
PRINT                : 4 5 6 7
RBRACE               : 22 24 25 26 27 31 38 39 40
RPAREN               : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 24 24 25 25 25 26 27 43
SEMI                 : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 28 30
SET                  : 28
SI_NO                : 40
STEP                 : 25
STRING               : 7
TIMES                : 53
TO                   : 24 25
VERTICAL             : 18 19
VIBRATO              : 10
error                : 

Nonterminals, with rules where they appear:

Cuando               : 23 39
Else                 : 27
EnTons               : 32 33 34 35 36 37
Sino                 : 38
expr                 : 5 26 27 28 29 30 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55
statement            : 22 24 25 26 27 31 38 39 40 0


state 0

    (0) S' -> . statement
    (1) statement -> . NAME PERIOD NEGATION SEMI
    (2) statement -> . NAME PERIOD LETTER_F SEMI
    (3) statement -> . NAME PERIOD LETTER_T SEMI
    (4) statement -> . PRINT LPAREN NUMBER RPAREN SEMI
    (5) statement -> . PRINT LPAREN expr RPAREN SEMI
    (6) statement -> . PRINT LPAREN NAME RPAREN SEMI
    (7) statement -> . PRINT LPAREN STRING RPAREN SEMI
    (8) statement -> . METRONOMO LPAREN LETTER_D COMMA NUMBER RPAREN SEMI
    (9) statement -> . METRONOMO LPAREN LETTER_A COMMA NUMBER RPAREN SEMI
    (10) statement -> . VIBRATO LPAREN NUMBER RPAREN SEMI
    (11) statement -> . GOLPE LPAREN RPAREN SEMI
    (12) statement -> . PERCUTOR LPAREN LETTER_D LETTER_I RPAREN SEMI
    (13) statement -> . PERCUTOR LPAREN LETTER_A LETTER_B RPAREN SEMI
    (14) statement -> . PERCUTOR LPAREN LETTER_I RPAREN SEMI
    (15) statement -> . PERCUTOR LPAREN LETTER_D RPAREN SEMI
    (16) statement -> . PERCUTOR LPAREN LETTER_B RPAREN SEMI
    (17) statement -> . PERCUTOR LPAREN LETTER_A RPAREN SEMI
    (18) statement -> . VERTICAL LPAREN LETTER_D RPAREN SEMI
    (19) statement -> . VERTICAL LPAREN LETTER_I RPAREN SEMI
    (20) statement -> . ABANICO LPAREN LETTER_A RPAREN SEMI
    (21) statement -> . ABANICO LPAREN LETTER_B RPAREN SEMI
    (22) statement -> . DEF NAME LPAREN RPAREN LBRACE statement RBRACE
    (23) statement -> . EN_CASO NAME Cuando
    (24) statement -> . FOR LPAREN NUMBER RPAREN TO LPAREN NUMBER RPAREN LBRACE statement RBRACE
    (25) statement -> . FOR LPAREN NUMBER RPAREN TO LPAREN NUMBER RPAREN STEP LPAREN NUMBER RPAREN LBRACE statement RBRACE
    (26) statement -> . IF LPAREN expr RPAREN LBRACE statement RBRACE
    (27) statement -> . IF LPAREN expr RPAREN LBRACE statement RBRACE Else
    (28) statement -> . SET NAME COMMA expr SEMI
    (29) statement -> . expr
    (30) statement -> . NAME ASSIGN expr SEMI
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 2
    PRINT           shift and go to state 3
    METRONOMO       shift and go to state 7
    VIBRATO         shift and go to state 8
    GOLPE           shift and go to state 9
    PERCUTOR        shift and go to state 10
    VERTICAL        shift and go to state 11
    ABANICO         shift and go to state 12
    DEF             shift and go to state 13
    EN_CASO         shift and go to state 14
    FOR             shift and go to state 15
    IF              shift and go to state 16
    SET             shift and go to state 17
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    statement                      shift and go to state 1
    expr                           shift and go to state 6

state 1

    (0) S' -> statement .


state 2

    (1) statement -> NAME . PERIOD NEGATION SEMI
    (2) statement -> NAME . PERIOD LETTER_F SEMI
    (3) statement -> NAME . PERIOD LETTER_T SEMI
    (30) statement -> NAME . ASSIGN expr SEMI
    (41) expr -> NAME .
    PERIOD          shift and go to state 18
    ASSIGN          shift and go to state 19
    NOT_EQUAL       reduce using rule 41 (expr -> NAME .)
    EQUAL           reduce using rule 41 (expr -> NAME .)
    GE              reduce using rule 41 (expr -> NAME .)
    GT              reduce using rule 41 (expr -> NAME .)
    LE              reduce using rule 41 (expr -> NAME .)
    LT              reduce using rule 41 (expr -> NAME .)
    INT_DIVIDE      reduce using rule 41 (expr -> NAME .)
    MODULE          reduce using rule 41 (expr -> NAME .)
    DIVIDE          reduce using rule 41 (expr -> NAME .)
    TIMES           reduce using rule 41 (expr -> NAME .)
    MINUS           reduce using rule 41 (expr -> NAME .)
    PLUS            reduce using rule 41 (expr -> NAME .)
    $end            reduce using rule 41 (expr -> NAME .)
    RBRACE          reduce using rule 41 (expr -> NAME .)


state 3

    (4) statement -> PRINT . LPAREN NUMBER RPAREN SEMI
    (5) statement -> PRINT . LPAREN expr RPAREN SEMI
    (6) statement -> PRINT . LPAREN NAME RPAREN SEMI
    (7) statement -> PRINT . LPAREN STRING RPAREN SEMI
    LPAREN          shift and go to state 20


state 4

    (43) expr -> LPAREN . expr RPAREN
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 21

state 5

    (42) expr -> NUMBER .
    NOT_EQUAL       reduce using rule 42 (expr -> NUMBER .)
    EQUAL           reduce using rule 42 (expr -> NUMBER .)
    GE              reduce using rule 42 (expr -> NUMBER .)
    GT              reduce using rule 42 (expr -> NUMBER .)
    LE              reduce using rule 42 (expr -> NUMBER .)
    LT              reduce using rule 42 (expr -> NUMBER .)
    INT_DIVIDE      reduce using rule 42 (expr -> NUMBER .)
    MODULE          reduce using rule 42 (expr -> NUMBER .)
    DIVIDE          reduce using rule 42 (expr -> NUMBER .)
    TIMES           reduce using rule 42 (expr -> NUMBER .)
    MINUS           reduce using rule 42 (expr -> NUMBER .)
    PLUS            reduce using rule 42 (expr -> NUMBER .)
    $end            reduce using rule 42 (expr -> NUMBER .)
    RPAREN          reduce using rule 42 (expr -> NUMBER .)
    SEMI            reduce using rule 42 (expr -> NUMBER .)
    RBRACE          reduce using rule 42 (expr -> NUMBER .)


state 6

    (29) statement -> expr .
    (44) expr -> expr . NOT_EQUAL expr
    (45) expr -> expr . EQUAL expr
    (46) expr -> expr . GE expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . LT expr
    (50) expr -> expr . INT_DIVIDE expr
    (51) expr -> expr . MODULE expr
    (52) expr -> expr . DIVIDE expr
    (53) expr -> expr . TIMES expr
    (54) expr -> expr . MINUS expr
    (55) expr -> expr . PLUS expr
    $end            reduce using rule 29 (statement -> expr .)
    RBRACE          reduce using rule 29 (statement -> expr .)
    NOT_EQUAL       shift and go to state 23
    EQUAL           shift and go to state 24
    GE              shift and go to state 25
    GT              shift and go to state 26
    LE              shift and go to state 27
    LT              shift and go to state 28
    INT_DIVIDE      shift and go to state 29
    MODULE          shift and go to state 30
    DIVIDE          shift and go to state 31
    TIMES           shift and go to state 32
    MINUS           shift and go to state 33
    PLUS            shift and go to state 34


state 7

    (8) statement -> METRONOMO . LPAREN LETTER_D COMMA NUMBER RPAREN SEMI
    (9) statement -> METRONOMO . LPAREN LETTER_A COMMA NUMBER RPAREN SEMI
    LPAREN          shift and go to state 35


state 8

    (10) statement -> VIBRATO . LPAREN NUMBER RPAREN SEMI
    LPAREN          shift and go to state 36


state 9

    (11) statement -> GOLPE . LPAREN RPAREN SEMI
    LPAREN          shift and go to state 37


state 10

    (12) statement -> PERCUTOR . LPAREN LETTER_D LETTER_I RPAREN SEMI
    (13) statement -> PERCUTOR . LPAREN LETTER_A LETTER_B RPAREN SEMI
    (14) statement -> PERCUTOR . LPAREN LETTER_I RPAREN SEMI
    (15) statement -> PERCUTOR . LPAREN LETTER_D RPAREN SEMI
    (16) statement -> PERCUTOR . LPAREN LETTER_B RPAREN SEMI
    (17) statement -> PERCUTOR . LPAREN LETTER_A RPAREN SEMI
    LPAREN          shift and go to state 38


state 11

    (18) statement -> VERTICAL . LPAREN LETTER_D RPAREN SEMI
    (19) statement -> VERTICAL . LPAREN LETTER_I RPAREN SEMI
    LPAREN          shift and go to state 39


state 12

    (20) statement -> ABANICO . LPAREN LETTER_A RPAREN SEMI
    (21) statement -> ABANICO . LPAREN LETTER_B RPAREN SEMI
    LPAREN          shift and go to state 40


state 13

    (22) statement -> DEF . NAME LPAREN RPAREN LBRACE statement RBRACE
    NAME            shift and go to state 41


state 14

    (23) statement -> EN_CASO . NAME Cuando
    NAME            shift and go to state 42


state 15

    (24) statement -> FOR . LPAREN NUMBER RPAREN TO LPAREN NUMBER RPAREN LBRACE statement RBRACE
    (25) statement -> FOR . LPAREN NUMBER RPAREN TO LPAREN NUMBER RPAREN STEP LPAREN NUMBER RPAREN LBRACE statement RBRACE
    LPAREN          shift and go to state 43


state 16

    (26) statement -> IF . LPAREN expr RPAREN LBRACE statement RBRACE
    (27) statement -> IF . LPAREN expr RPAREN LBRACE statement RBRACE Else
    LPAREN          shift and go to state 44


state 17

    (28) statement -> SET . NAME COMMA expr SEMI
    NAME            shift and go to state 45


state 18

    (1) statement -> NAME PERIOD . NEGATION SEMI
    (2) statement -> NAME PERIOD . LETTER_F SEMI
    (3) statement -> NAME PERIOD . LETTER_T SEMI
    NEGATION        shift and go to state 46
    LETTER_F        shift and go to state 47
    LETTER_T        shift and go to state 48


state 19

    (30) statement -> NAME ASSIGN . expr SEMI
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 49

state 20

    (4) statement -> PRINT LPAREN . NUMBER RPAREN SEMI
    (5) statement -> PRINT LPAREN . expr RPAREN SEMI
    (6) statement -> PRINT LPAREN . NAME RPAREN SEMI
    (7) statement -> PRINT LPAREN . STRING RPAREN SEMI
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NUMBER          shift and go to state 50
    NAME            shift and go to state 52
    STRING          shift and go to state 53
    LPAREN          shift and go to state 4

    expr                           shift and go to state 51

state 21

    (43) expr -> LPAREN expr . RPAREN
    (44) expr -> expr . NOT_EQUAL expr
    (45) expr -> expr . EQUAL expr
    (46) expr -> expr . GE expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . LT expr
    (50) expr -> expr . INT_DIVIDE expr
    (51) expr -> expr . MODULE expr
    (52) expr -> expr . DIVIDE expr
    (53) expr -> expr . TIMES expr
    (54) expr -> expr . MINUS expr
    (55) expr -> expr . PLUS expr
    RPAREN          shift and go to state 54
    NOT_EQUAL       shift and go to state 23
    EQUAL           shift and go to state 24
    GE              shift and go to state 25
    GT              shift and go to state 26
    LE              shift and go to state 27
    LT              shift and go to state 28
    INT_DIVIDE      shift and go to state 29
    MODULE          shift and go to state 30
    DIVIDE          shift and go to state 31
    TIMES           shift and go to state 32
    MINUS           shift and go to state 33
    PLUS            shift and go to state 34


state 22

    (41) expr -> NAME .
    RPAREN          reduce using rule 41 (expr -> NAME .)
    NOT_EQUAL       reduce using rule 41 (expr -> NAME .)
    EQUAL           reduce using rule 41 (expr -> NAME .)
    GE              reduce using rule 41 (expr -> NAME .)
    GT              reduce using rule 41 (expr -> NAME .)
    LE              reduce using rule 41 (expr -> NAME .)
    LT              reduce using rule 41 (expr -> NAME .)
    INT_DIVIDE      reduce using rule 41 (expr -> NAME .)
    MODULE          reduce using rule 41 (expr -> NAME .)
    DIVIDE          reduce using rule 41 (expr -> NAME .)
    TIMES           reduce using rule 41 (expr -> NAME .)
    MINUS           reduce using rule 41 (expr -> NAME .)
    PLUS            reduce using rule 41 (expr -> NAME .)
    SEMI            reduce using rule 41 (expr -> NAME .)
    $end            reduce using rule 41 (expr -> NAME .)
    RBRACE          reduce using rule 41 (expr -> NAME .)


state 23

    (44) expr -> expr NOT_EQUAL . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 55

state 24

    (45) expr -> expr EQUAL . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 56

state 25

    (46) expr -> expr GE . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 57

state 26

    (47) expr -> expr GT . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 58

state 27

    (48) expr -> expr LE . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 59

state 28

    (49) expr -> expr LT . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 60

state 29

    (50) expr -> expr INT_DIVIDE . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 61

state 30

    (51) expr -> expr MODULE . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 62

state 31

    (52) expr -> expr DIVIDE . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 63

state 32

    (53) expr -> expr TIMES . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 64

state 33

    (54) expr -> expr MINUS . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 65

state 34

    (55) expr -> expr PLUS . expr
    (41) expr -> . NAME
    (42) expr -> . NUMBER
    (43) expr -> . LPAREN expr RPAREN
    (44) expr -> . expr NOT_EQUAL expr
    (45) expr -> . expr EQUAL expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr INT_DIVIDE expr
    (51) expr -> . expr MODULE expr
    (52) expr -> . expr DIVIDE expr
    (53) expr -> . expr TIMES expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr PLUS expr
    NAME            shift and go to state 22
    NUMBER          shift and go to state 5
    LPAREN          shift and go to state 4

    expr                           shift and go to state 66

state 35

    (8) statement -> METRONOMO LPAREN . LETTER_D COMMA NUMBER RPAREN SEMI
    (9) statement -> METRONOMO LPAREN . LETTER_A COMMA NUMBER RPAREN SEMI
    LETTER_D        shift and go to state 67
    LETTER_A        shift and go to state 68


state 36

    (10) statement -> VIBRATO LPAREN . NUMBER RPAREN SEMI
    NUMBER          shift and go to state 69


state 37

    (11) statement -> GOLPE LPAREN . RPAREN SEMI
    RPAREN          shift and go to state 70


state 38

    (12) statement -> PERCUTOR LPAREN . LETTER_D LETTER_I RPAREN SEMI
    (13) statement -> PERCUTOR LPAREN . LETTER_A LETTER_B RPAREN SEMI
    (14) statement -> PERCUTOR LPAREN . LETTER_I RPAREN SEMI
    (15) statement -> PERCUTOR LPAREN . LETTER_D RPAREN SEMI
    (16) statement -> PERCUTOR LPAREN . LETTER_B RPAREN SEMI
    (17) statement -> PERCUTOR LPAREN . LETTER_A RPAREN SEMI
    LETTER_D        shift and go to state 71
    LETTER_A        shift and go to state 73
    LETTER_I        shift and go to state 72
    LETTER_B        shift and go to state 74


state 39

    (18) statement -> VERTICAL LPAREN . LETTER_D RPAREN SEMI
    (19) statement -> VERTICAL LPAREN . LETTER_I RPAREN SEMI
    LETTER_D        shift and go to state 75
    LETTER_I        shift and go to state 76


state 40

    (20) statement -> ABANICO LPAREN . LETTER_A RPAREN SEMI
    (21) statement -> ABANICO LPAREN . LETTER_B RPAREN SEMI
    LETTER_A        shift and go to state 77
    LETTER_B        shift and go to state 78


state 41

    (22) statement -> DEF NAME . LPAREN RPAREN LBRACE statement RBRACE
    LPAREN          shift and go to state 79


state 42

    (23) statement -> EN_CASO NAME . Cuando
    (32) Cuando -> . CUANDO NOT_EQUAL NUMBER EnTons
    (33) Cuando -> . CUANDO EQUAL NUMBER EnTons
    (34) Cuando -> . CUANDO GE NUMBER EnTons
    (35) Cuando -> . CUANDO GT NUMBER EnTons
    (36) Cuando -> . CUANDO LE NUMBER EnTons
    (37) Cuando -> . CUANDO LT NUMBER EnTons
    CUANDO          shift and go to state 81

    Cuando                         shift and go to state 80

state 43

    (24) statement -> FOR LPAREN . NUMBER RPAREN TO LPAREN NUMBER RPAREN LBRACE statement RBRACE
    (25) statement -> FOR LPAREN . NUMBER RPAREN TO LPAREN NUMBER RPAREN STEP LPAREN NUMBER RPAREN LBRACE statement RBRACE
    NUMBER          shift and go to state 82


state 44
